--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -18,8 +18,8 @@ http {
 			proxy_buffering off;
 		}
 
-		if ($http_x_forwarded_proto != "https") {
-			rewrite ^(.*)$ https://$host$1 permanent;
-		}
+		#if ($http_x_forwarded_proto != "https") {
+		#	rewrite ^(.*)$ https://$host$1 permanent;
+		#}
 	}
 }
